<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="button1_name">Popular Movies</string>
    <string name="button2_name">Stock Hawk</string>
    <string name="button3_name">Build it Bigger</string>
    <string name="button4_name">Make Your App Material</string>
    <string name="button5_name">Go Ubiquitous</string>
    <string name="button6_name">Capstone</string>
    <string name="heading_text">My Nanodegree Apps!</string>
</resources>
